feat: 单帧图片的活体检测功能

--- a/ViewFaceCore.MSTest/ViewFaceCore.MSTest.csproj
+++ b/ViewFaceCore.MSTest/ViewFaceCore.MSTest.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
