chore: 添加生成前命令，自动复制 ViewFaceCore 生成所需的依赖

--- a/ViewFace/ViewFace.vcxproj
+++ b/ViewFace/ViewFace.vcxproj
@@ -72,15 +72,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)$(ProjectName)\bin\$(Configuration)\$(PlatformTarget)</OutDir>
+    <IntDir>obj\$(Configuration)\$(PlatformTarget)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <OutDir>$(SolutionDir)$(ProjectName)\bin\$(Configuration)\$(PlatformTarget)</OutDir>
+    <IntDir>obj\$(Configuration)\$(PlatformTarget)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)$(ProjectName)\bin\$(Configuration)\$(PlatformTarget)</OutDir>
+    <IntDir>obj\$(Configuration)\$(PlatformTarget)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
+    <OutDir>$(SolutionDir)$(ProjectName)\bin\$(Configuration)\$(PlatformTarget)</OutDir>
+    <IntDir>obj\$(Configuration)\$(PlatformTarget)</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -95,7 +103,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalLibraryDirectories>C:\vclib\seeta\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\vclib\seeta\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SeetaAgePredictor600.lib;SeetaAgePredictor600d.lib;SeetaEyeStateDetector200.lib;SeetaEyeStateDetector200d.lib;SeetaFaceAntiSpoofingX600.lib;SeetaFaceAntiSpoofingX600d.lib;SeetaFaceDetector600.lib;SeetaFaceDetector600d.lib;SeetaFaceLandmarker600.lib;SeetaFaceLandmarker600d.lib;SeetaFaceRecognizer610.lib;SeetaFaceRecognizer610d.lib;SeetaFaceTracking600.lib;SeetaFaceTracking600d.lib;SeetaGenderPredictor600.lib;SeetaGenderPredictor600d.lib;SeetaMaskDetector200.lib;SeetaMaskDetector200d.lib;SeetaPoseEstimation600.lib;SeetaPoseEstimation600d.lib;SeetaQualityAssessor300.lib;SeetaQualityAssessor300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)\$(TargetName)$(TargetExt)</OutputFile>
       <ProgramDatabaseFile>$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)\$(TargetName).pdb</ProgramDatabaseFile>
@@ -105,6 +113,9 @@
     <PostBuildEvent>
       <Message>copy /Y "$(SolutionDir)$(ProjectName)\Libraries\*.dll" "$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)"</Message>
     </PostBuildEvent>
+    <BuildLog>
+      <Path>obj\$(IntDir)$(MSBuildProjectName).log</Path>
+    </BuildLog>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -119,7 +130,7 @@
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalLibraryDirectories>C:\vclib\seeta\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\vclib\seeta\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SeetaAgePredictor600.lib;SeetaAgePredictor600d.lib;SeetaEyeStateDetector200.lib;SeetaEyeStateDetector200d.lib;SeetaFaceAntiSpoofingX600.lib;SeetaFaceAntiSpoofingX600d.lib;SeetaFaceDetector600.lib;SeetaFaceDetector600d.lib;SeetaFaceLandmarker600.lib;SeetaFaceLandmarker600d.lib;SeetaFaceRecognizer610.lib;SeetaFaceRecognizer610d.lib;SeetaFaceTracking600.lib;SeetaFaceTracking600d.lib;SeetaGenderPredictor600.lib;SeetaGenderPredictor600d.lib;SeetaMaskDetector200.lib;SeetaMaskDetector200d.lib;SeetaPoseEstimation600.lib;SeetaPoseEstimation600d.lib;SeetaQualityAssessor300.lib;SeetaQualityAssessor300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)\$(TargetName)$(TargetExt)</OutputFile>
       <ProgramDatabaseFile>$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)\$(TargetName).pdb</ProgramDatabaseFile>
@@ -129,6 +140,9 @@
     <PostBuildEvent>
       <Message>copy /Y "$(SolutionDir)$(ProjectName)\Libraries\*.dll" "$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)"</Message>
     </PostBuildEvent>
+    <BuildLog>
+      <Path>obj\$(IntDir)$(MSBuildProjectName).log</Path>
+    </BuildLog>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -147,7 +161,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalLibraryDirectories>C:\vclib\seeta\lib\x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\vclib\seeta\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SeetaAgePredictor600.lib;SeetaAgePredictor600d.lib;SeetaEyeStateDetector200.lib;SeetaEyeStateDetector200d.lib;SeetaFaceAntiSpoofingX600.lib;SeetaFaceAntiSpoofingX600d.lib;SeetaFaceDetector600.lib;SeetaFaceDetector600d.lib;SeetaFaceLandmarker600.lib;SeetaFaceLandmarker600d.lib;SeetaFaceRecognizer610.lib;SeetaFaceRecognizer610d.lib;SeetaFaceTracking600.lib;SeetaFaceTracking600d.lib;SeetaGenderPredictor600.lib;SeetaGenderPredictor600d.lib;SeetaMaskDetector200.lib;SeetaMaskDetector200d.lib;SeetaPoseEstimation600.lib;SeetaPoseEstimation600d.lib;SeetaQualityAssessor300.lib;SeetaQualityAssessor300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)\$(TargetName)$(TargetExt)</OutputFile>
       <ProgramDatabaseFile>$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)\$(TargetName).pdb</ProgramDatabaseFile>
@@ -157,6 +171,9 @@
     <PostBuildEvent>
       <Message>copy /Y "$(SolutionDir)$(ProjectName)\Libraries\*.dll" "$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)"</Message>
     </PostBuildEvent>
+    <BuildLog>
+      <Path>obj\$(IntDir)$(MSBuildProjectName).log</Path>
+    </BuildLog>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -175,7 +192,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableUAC>false</EnableUAC>
-      <AdditionalLibraryDirectories>C:\vclib\seeta\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\vclib\seeta\lib\$(PlatformTarget);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>SeetaAgePredictor600.lib;SeetaAgePredictor600d.lib;SeetaEyeStateDetector200.lib;SeetaEyeStateDetector200d.lib;SeetaFaceAntiSpoofingX600.lib;SeetaFaceAntiSpoofingX600d.lib;SeetaFaceDetector600.lib;SeetaFaceDetector600d.lib;SeetaFaceLandmarker600.lib;SeetaFaceLandmarker600d.lib;SeetaFaceRecognizer610.lib;SeetaFaceRecognizer610d.lib;SeetaFaceTracking600.lib;SeetaFaceTracking600d.lib;SeetaGenderPredictor600.lib;SeetaGenderPredictor600d.lib;SeetaMaskDetector200.lib;SeetaMaskDetector200d.lib;SeetaPoseEstimation600.lib;SeetaPoseEstimation600d.lib;SeetaQualityAssessor300.lib;SeetaQualityAssessor300d.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)\$(TargetName)$(TargetExt)</OutputFile>
       <ProgramDatabaseFile>$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)\$(TargetName).pdb</ProgramDatabaseFile>
@@ -185,6 +202,9 @@
     <PostBuildEvent>
       <Message>copy /Y "$(SolutionDir)$(ProjectName)\Libraries\*.dll" "$(SolutionDir)$(ProjectName)\bin\$(ConfigurationName)\$(PlatformTarget)"</Message>
     </PostBuildEvent>
+    <BuildLog>
+      <Path>obj\$(IntDir)$(MSBuildProjectName).log</Path>
+    </BuildLog>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ViewFace.cpp" />
