--- a/ViewFaceCore/ViewFaceCore.csproj
+++ b/ViewFaceCore/ViewFaceCore.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
   </ItemGroup>
 
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="xcopy /Y &quot;C:\vclib\seeta\lib\x86\*.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x86\*.dll&quot;&#xD;&#xA;xcopy /Y &quot;C:\vclib\seeta\lib\x64\*.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x64\*.dll&quot;&#xD;&#xA;&#xD;&#xA;copy /Y &quot;$(SolutionDir)ViewFace\bin\Release\x86\ViewFace.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x86\ViewFace.dll&quot;&#xD;&#xA;copy /Y &quot;$(SolutionDir)ViewFace\bin\Release\x64\ViewFace.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x64\ViewFace.dll&quot;&#xD;&#xA;" />
+  </Target>
+
 </Project>
