refactor: 人脸识别参数配置类 feat: 人脸跟踪

--- a/ViewFaceTest/ViewFaceTest.csproj
+++ b/ViewFaceTest/ViewFaceTest.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ViewFaceCore" Version="0.2.0" />
+    <ProjectReference Include="..\ViewFaceCore\ViewFaceCore.csproj" />
   </ItemGroup>
 
 </Project>
