fix: 图像颜色通道的问题 feat: 人脸跟踪 feat: 质量评估 refactor: 图像数据处理

--- a/ViewFace/ViewFace.vcxproj
+++ b/ViewFace/ViewFace.vcxproj
@@ -207,6 +207,8 @@
     </BuildLog>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="seetaEx\QualityOfClarityEx.cpp" />
+    <ClCompile Include="seetaEx\QualityOfNoMask.cpp" />
     <ClCompile Include="ViewFace.cpp" />
   </ItemGroup>
   <ItemGroup>
