feat: 新增版本资源文件 refactor: 优化了数据封送方式

--- a/ViewFace/ViewFace.vcxproj.filters
+++ b/ViewFace/ViewFace.vcxproj.filters
@@ -31,4 +31,14 @@
   <ItemGroup>
     <None Include="cpp.hint" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ViewFace.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
+  </ItemGroup>
 </Project>
