--- a/ViewFaceCore/ViewFaceCore.csproj
+++ b/ViewFaceCore/ViewFaceCore.csproj
@@ -4,9 +4,10 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <Platforms>AnyCPU</Platforms>
     <Authors>View</Authors>
-    <Version>0.0.2</Version>
+    <Version>0.3.3</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <OutputType>Library</OutputType>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -14,13 +15,12 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="System.Drawing.Common" Version="4.7.0" />
-    <PackageReference Include="View.Drawing" Version="0.1.2" />
-  </ItemGroup>
-
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="xcopy /Y &quot;C:\vclib\seeta\lib\x86\*.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x86\*.dll&quot;&#xD;&#xA;xcopy /Y &quot;C:\vclib\seeta\lib\x64\*.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x64\*.dll&quot;&#xD;&#xA;&#xD;&#xA;copy /Y &quot;$(SolutionDir)ViewFace\bin\Release\x86\ViewFace.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x86\ViewFace.dll&quot;&#xD;&#xA;copy /Y &quot;$(SolutionDir)ViewFace\bin\Release\x64\ViewFace.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x64\ViewFace.dll&quot;&#xD;&#xA;" />
   </Target>
+
+  <ItemGroup>
+    <PackageReference Include="View.Drawing" Version="0.1.4" />
+  </ItemGroup>
 
 </Project>
