feat: 人脸属性 - 性别预测 feat: 人脸属性 - 眼睛状态检测

--- a/ViewFaceTest/ViewFaceTest.csproj
+++ b/ViewFaceTest/ViewFaceTest.csproj
@@ -10,6 +10,10 @@
   </Target>
 
   <ItemGroup>
+    <PackageReference Include="View.Core" Version="0.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ViewFaceCore\ViewFaceCore.csproj" />
   </ItemGroup>
 
