--- a/ViewFaceCore/ViewFaceCore.csproj
+++ b/ViewFaceCore/ViewFaceCore.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -19,12 +19,7 @@
     <DocumentationFile>C:\Project\view\dotnet\View.Face\ViewFaceCore\ViewFaceCore.xml</DocumentationFile>
   </PropertyGroup>
 
-  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
-    <Exec Command="xcopy /Y &quot;C:\vclib\seeta\lib\x86\*.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x86\*.dll&quot;&#xD;&#xA;xcopy /Y &quot;C:\vclib\seeta\lib\x64\*.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x64\*.dll&quot;&#xD;&#xA;&#xD;&#xA;copy /Y &quot;$(SolutionDir)ViewFace\bin\Release\x86\ViewFace.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x86\ViewFace.dll&quot;&#xD;&#xA;copy /Y &quot;$(SolutionDir)ViewFace\bin\Release\x64\ViewFace.dll&quot; &quot;$(ProjectDir)$(OutDir)FaceLibraries\x64\ViewFace.dll&quot;&#xD;&#xA;" />
-  </Target>
-
   <ItemGroup>
-    <PackageReference Include="View.Drawing" Version="0.1.4" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
   </ItemGroup>
-
 </Project>
