--- a/Bridges/Shared/Shared.vcxitems.filters
+++ b/Bridges/Shared/Shared.vcxitems.filters
@@ -13,4 +13,7 @@
       <Filter>seetaEx</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="$(MSBuildThisFileDirectory)Base.h" />
+  </ItemGroup>
 </Project>
