--- a/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj.filters
+++ b/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj.filters
@@ -3,4 +3,7 @@
   <ItemGroup>
     <ClCompile Include="ViewFaceBridge.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="environment.h" />
+  </ItemGroup>
 </Project>
