修改 SeetaFace 仓库引用

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "SeetaFace/index"]
 	path = SeetaFace/index
-	url = https://github.com/SeetaFace6Open/index.git
+	url = https://github.com/ViewFaceCore/index.git
