--- a/Bridges/Linux/ViewFaceBridge/ViewFaceBridge.vcxproj
+++ b/Bridges/Linux/ViewFaceBridge/ViewFaceBridge.vcxproj
@@ -135,42 +135,48 @@
   </ItemGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x86'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>../../../SeetaFace/index/build/lib64/libtennis_pentium.so;../../../SeetaFace/index/build/lib64/libtennis_sandy_bridge.so;../../../SeetaFace/index/build/lib64/libSeetaAgePredictor600.so;../../../SeetaFace/index/build/lib64/libSeetaAuthorize.so;../../../SeetaFace/index/build/lib64/libSeetaEyeStateDetector200.so;../../../SeetaFace/index/build/lib64/libSeetaFaceAntiSpoofingX600.so;../../../SeetaFace/index/build/lib64/libSeetaFaceDetector600.so;../../../SeetaFace/index/build/lib64/libSeetaFaceLandmarker600.so;../../../SeetaFace/index/build/lib64/libSeetaFaceRecognizer610.so;../../../SeetaFace/index/build/lib64/libSeetaFaceTracking600.so;../../../SeetaFace/index/build/lib64/libSeetaGenderPredictor600.so;../../../SeetaFace/index/build/lib64/libSeetaMaskDetector200.so;../../../SeetaFace/index/build/lib64/libSeetaPoseEstimation600.so;../../../SeetaFace/index/build/lib64/libSeetaQualityAssessor300.so;../../../SeetaFace/index/build/lib64/libtennis.so;../../../SeetaFace/index/build/lib64/libtennis_haswell.so;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>../../../SeetaFace/index/build/lib64/libtennis_pentium.so;../../../SeetaFace/index/build/lib64/libtennis_sandy_bridge.so;../../../SeetaFace/index/build/lib64/libSeetaAgePredictor600.so;../../../SeetaFace/index/build/lib64/libSeetaAuthorize.so;../../../SeetaFace/index/build/lib64/libSeetaEyeStateDetector200.so;../../../SeetaFace/index/build/lib64/libSeetaFaceAntiSpoofingX600.so;../../../SeetaFace/index/build/lib64/libSeetaFaceDetector600.so;../../../SeetaFace/index/build/lib64/libSeetaFaceLandmarker600.so;../../../SeetaFace/index/build/lib64/libSeetaFaceRecognizer610.so;../../../SeetaFace/index/build/lib64/libSeetaFaceTracking600.so;../../../SeetaFace/index/build/lib64/libSeetaGenderPredictor600.so;../../../SeetaFace/index/build/lib64/libSeetaMaskDetector200.so;../../../SeetaFace/index/build/lib64/libSeetaPoseEstimation600.so;../../../SeetaFace/index/build/lib64/libSeetaQualityAssessor300.so;../../../SeetaFace/index/build/lib64/libtennis.so;../../../SeetaFace/index/build/lib64/libtennis_haswell.so;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x86'">
     <ClCompile>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
