--- a/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj
+++ b/Bridges/Windows/ViewFaceBridge/ViewFaceBridge.vcxproj
@@ -97,12 +97,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>..\..\..\SeetaFace\index\build\lib\x86\SeetaAgePredictor600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaEyeStateDetector200.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaEyeStateDetector200d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceAntiSpoofingX600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceAntiSpoofingX600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceDetector600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceDetector600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceLandmarker600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceLandmarker600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceRecognizer610.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceRecognizer610d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceTracking600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceTracking600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaGenderPredictor600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaGenderPredictor600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaMaskDetector200.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaMaskDetector200d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaPoseEstimation600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaPoseEstimation600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaQualityAssessor300.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaQualityAssessor300d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaAgePredictor600.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -113,7 +114,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
@@ -121,6 +122,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>..\..\..\SeetaFace\index\build\lib\x86\SeetaAgePredictor600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaEyeStateDetector200.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaEyeStateDetector200d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceAntiSpoofingX600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceAntiSpoofingX600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceDetector600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceDetector600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceLandmarker600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceLandmarker600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceRecognizer610.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceRecognizer610d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceTracking600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaFaceTracking600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaGenderPredictor600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaGenderPredictor600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaMaskDetector200.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaMaskDetector200d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaPoseEstimation600.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaPoseEstimation600d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaQualityAssessor300.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaQualityAssessor300d.lib;..\..\..\SeetaFace\index\build\lib\x86\SeetaAgePredictor600.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -129,12 +131,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>..\..\..\SeetaFace\index\build\lib\x64\SeetaAgePredictor600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaEyeStateDetector200.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaEyeStateDetector200d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceAntiSpoofingX600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceAntiSpoofingX600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceDetector600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceDetector600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceLandmarker600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceLandmarker600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceRecognizer610.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceRecognizer610d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceTracking600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceTracking600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaGenderPredictor600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaGenderPredictor600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaMaskDetector200.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaMaskDetector200d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaPoseEstimation600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaPoseEstimation600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaQualityAssessor300.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaQualityAssessor300d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaAgePredictor600.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -145,7 +148,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\SeetaFace\index\build\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DisableSpecificWarnings>4996;%(DisableSpecificWarnings)</DisableSpecificWarnings>
     </ClCompile>
     <Link>
@@ -153,13 +156,14 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>..\..\..\SeetaFace\index\build\lib\x64\SeetaAgePredictor600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaEyeStateDetector200.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaEyeStateDetector200d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceAntiSpoofingX600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceAntiSpoofingX600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceDetector600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceDetector600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceLandmarker600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceLandmarker600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceRecognizer610.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceRecognizer610d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceTracking600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaFaceTracking600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaGenderPredictor600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaGenderPredictor600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaMaskDetector200.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaMaskDetector200d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaPoseEstimation600.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaPoseEstimation600d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaQualityAssessor300.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaQualityAssessor300d.lib;..\..\..\SeetaFace\index\build\lib\x64\SeetaAgePredictor600.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ViewFaceBridge.cpp" />
+    <ClInclude Include="environment.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="environment.h" />
+    <ClCompile Include="ViewFaceBridge.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
