--- a/nuget.config
+++ b/nuget.config
@@ -4,6 +4,7 @@
         <clear />
         <add key="github" value="https://nuget.pkg.github.com/View12138/index.json" />
         <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+        <add key="ViewFaceCore.Local" value="C:\ViewFaceCore\ViewFaceCore\bin\Release" />
     </packageSources>
     <packageSourceCredentials>
         <github>
