--- a/Models/ViewFaceCore.all_models/ViewFaceCore.all_models.csproj
+++ b/Models/ViewFaceCore.all_models/ViewFaceCore.all_models.csproj
@@ -1,25 +1,29 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFrameworks>net40;net45;net461;netstandard2.0;netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
-		<Version>6.0.0</Version>
+		<Version>6.0.1</Version>
 		<PackageVersion>$(Version)</PackageVersion>
 		<Authors>View</Authors>
+		<PackageIcon>View-Logo.png</PackageIcon>
 	</PropertyGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\ViewFaceCore.age_predictor\ViewFaceCore.age_predictor.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.eye_state\ViewFaceCore.eye_state.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.face_detector\ViewFaceCore.face_detector.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.face_landmarker_mask_pts5\ViewFaceCore.face_landmarker_mask_pts5.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.face_landmarker_pts5\ViewFaceCore.face_landmarker_pts5.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.face_landmarker_pts68\ViewFaceCore.face_landmarker_pts68.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.face_recognizer\ViewFaceCore.face_recognizer.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.face_recognizer_light\ViewFaceCore.face_recognizer_light.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.face_recognizer_mask\ViewFaceCore.face_recognizer_mask.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.fas_first\ViewFaceCore.fas_first.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.fas_second\ViewFaceCore.fas_second.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.gender_predictor\ViewFaceCore.gender_predictor.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.mask_detector\ViewFaceCore.mask_detector.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.pose_estimation\ViewFaceCore.pose_estimation.csproj" />
-		<ProjectReference Include="..\ViewFaceCore.quality_lbn\ViewFaceCore.quality_lbn.csproj" />
+		<None Include="..\..\Images\View-Logo.png" Pack="true" PackagePath="" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\ViewFaceCore.age_predictor\ViewFaceCore.age_predictor.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.eye_state\ViewFaceCore.eye_state.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.face_detector\ViewFaceCore.face_detector.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.face_landmarker_mask_pts5\ViewFaceCore.face_landmarker_mask_pts5.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.face_landmarker_pts5\ViewFaceCore.face_landmarker_pts5.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.face_landmarker_pts68\ViewFaceCore.face_landmarker_pts68.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.face_recognizer\ViewFaceCore.face_recognizer.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.face_recognizer_light\ViewFaceCore.face_recognizer_light.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.face_recognizer_mask\ViewFaceCore.face_recognizer_mask.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.fas_first\ViewFaceCore.fas_first.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.fas_second\ViewFaceCore.fas_second.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.gender_predictor\ViewFaceCore.gender_predictor.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.mask_detector\ViewFaceCore.mask_detector.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.pose_estimation\ViewFaceCore.pose_estimation.csproj" PrivateAssets="contentFiles;analyzers" />
+		<ProjectReference Include="..\ViewFaceCore.quality_lbn\ViewFaceCore.quality_lbn.csproj" PrivateAssets="contentFiles;analyzers" />
 	</ItemGroup>
 </Project>
