--- a/Libraries/ViewFaceCore.runtime.win.x86/ViewFaceCore.runtime.win.x86.nuspec
+++ b/Libraries/ViewFaceCore.runtime.win.x86/ViewFaceCore.runtime.win.x86.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
 	<metadata>
 		<id>ViewFaceCore.runtime.win.x86</id>
-		<version>6.0.0</version>
+		<version>6.0.1</version>
 		<title></title>
 		<authors>View</authors>
 		<owners></owners>
@@ -11,6 +11,8 @@
 		<description>ViewFaceCore Native libraries for Windows-x86</description>
 	</metadata>
 	<files>
+		<file src="..\..\Bridges\Windows\ViewFaceBridge\bin\Release\x86\ViewFaceBridge.dll" target="build\viewfacecore\win\x86\ViewFaceBridge.dll" />
+		
 		<file src="..\..\SeetaFace\index\build\bin\x86\tennis.dll" target="build\viewfacecore\win\x86\tennis.dll" />
 		<file src="..\..\SeetaFace\index\build\bin\x86\tennis_haswell.dll" target="build\viewfacecore\win\x86\tennis_haswell.dll" />
 		<file src="..\..\SeetaFace\index\build\bin\x86\tennis_pentium.dll" target="build\viewfacecore\win\x86\tennis_pentium.dll" />
